--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Sadaf, möchtest aud ein Date mit mir gehen?</h1>
+                <h1 class = "header_text">Farwa, möchtest aud ein Date mit mir gehen?</h1>
             </div>
             <div class="gif_container">
                 <img src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif" alt="Cute animated illustration">
